--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,8 +80,9 @@ jobs:
         git config user.name "bot"
         git config user.email "bot@github.com"
         git add .
-        git commit -m "$TAG"
+        git commit -m "$TAG$(TZ='Asia/Shanghai' date +@%Y%m%d)"
         git push --force --quiet "https://$GITHUB_TOKEN@github.com/simonsmh/openwrt-dist.git" HEAD:$TAG
+
   buildimg:
     name: Build Openwrt Image
     needs: buildpkg
@@ -89,17 +90,36 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PROFILE: [netgear_r7800, qihoo-c301, asus_rt-ac58u]
+        PROFILE: [netgear_r7800, qihoo-c301, asus_rt-ac58u, asus_rt-ac58u.with_nat6, r6220.with_stubby, r6220.without_ss, qihoo-c301.with_relayd]
         include:
         - PROFILE: netgear_r7800
           IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ipq806x/generic/openwrt-imagebuilder-19.07.1-ipq806x-generic.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates libustream-wolfssl block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-wolfssl -wpad-basic
+          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic
+          INCLUDE_FILES: true
         - PROFILE: qihoo-c301
           IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ar71xx/generic/openwrt-imagebuilder-19.07.1-ar71xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-wolfssl block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop
+          INCLUDE_FILES: true
         - PROFILE: asus_rt-ac58u
           IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.1-ipq40xx-generic.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates libustream-wolfssl block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-wolfssl -wpad-basic 
+          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic
+          INCLUDE_FILES: true
+        - PROFILE: asus_rt-ac58u.with_nat6
+          IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.1-ipq40xx-generic.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client tcpdump bind-dig iperf3 mtr iptables-mod-tproxy ip shadowsocks-libev luci-app-shadowsocks luci-app-chinadns stubby shadowsocks-libev-server kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras iptables-mod-iprange kmod-ipt-nat6 kmod-ip6tables-extra kmod-ip6-tunnel miniupnpd luci-app-upnp block-mount
+          INCLUDE_FILES: false
+        - PROFILE: r6220.with_stubby
+          IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ramips/mt7621/openwrt-imagebuilder-19.07.1-ramips-mt7621.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client tcpdump bind-dig iperf3 mtr iptables-mod-tproxy ip shadowsocks-libev luci-app-shadowsocks luci-app-chinadns stubby shadowsocks-libev-server kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras iptables-mod-iprange kmod-ipt-nat6 kmod-ip6tables-extra kmod-ip6-tunnel miniupnpd luci-app-upnp block-mount
+          INCLUDE_FILES: false
+        - PROFILE: r6220.without_ss
+          IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ramips/mt7621/openwrt-imagebuilder-19.07.1-ramips-mt7621.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client bind-dig iperf3 mtr ip kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras block-mount
+          INCLUDE_FILES: false
+        - PROFILE: qihoo-c301.with_relayd
+          IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ar71xx/generic/openwrt-imagebuilder-19.07.1-ar71xx-generic.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client bind-dig iperf3 mtr ip kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras block-mount relayd luci-proto-relay
+          INCLUDE_FILES: false
     steps:
     - uses: actions/checkout@master
     - name: Env for Openwrt ImageBuilder
@@ -110,11 +130,10 @@ jobs:
       run: |
         wget $IB_URL
         tar xf $(basename $IB_URL)
-    - name: Build Image
+    - name: Fetch Files
       env:
-        PROFILE: ${{ matrix.PROFILE }}
         IB_URL: ${{ matrix.IB_URL }}
-        PACKAGES: ${{ matrix.PACKAGES }}
+      if: matrix.INCLUDE_FILES
       run: |
         IB_HOME=$(basename $IB_URL|head -c -8)
         TAG=$(echo $IB_URL | sed -n 's/.*targets\/\(\w*\)\/.*/\1/p')
@@ -127,9 +146,22 @@ jobs:
         wget https://github.com/SYHGroup/easy_shell/raw/master/sss/update_list -O files/root/update_list
         wget https://gist.githubusercontent.com/simonsmh/2a609e0c801acabc2e1d7733432bce4c/raw/blacklist-ip.conf -O files/etc/smartdns/blacklist-ip.conf
         echo "src/gz simonsmh https://github.com/simonsmh/openwrt-dist/raw/$TAG" > files/etc/opkg/customfeeds.conf
+    - name: Build Image
+      shell: bash
+      env:
+        PROFILE: ${{ matrix.PROFILE }}
+        IB_URL: ${{ matrix.IB_URL }}
+        PACKAGES: ${{ matrix.PACKAGES }}
+      run: |
+        IB_HOME=$(basename $IB_URL|head -c -8)
+        TAG=$(echo $IB_URL | sed -n 's/.*targets\/\(\w*\)\/.*/\1/p')
+        cd $IB_HOME
         echo "src/gz simonsmh https://github.com/simonsmh/openwrt-dist/raw/$TAG" >> repositories.conf
-        TERM=xterm-256color make image PROFILE="$PROFILE" PACKAGES="$PACKAGES" FILES=files/
+        makeopts=("PROFILE=${PROFILE%.*}" "PACKAGES=$PACKAGES")
+        [[ -d files ]] && makeopts+=("FILES=files/")
+        TERM=xterm-256color make image "${makeopts[@]}"
     - name: Upload
+      id: upload
       env:
         PROFILE: ${{ matrix.PROFILE }}
         IB_URL: ${{ matrix.IB_URL }}
@@ -137,11 +169,19 @@ jobs:
       run: |
         IB_HOME=$(basename $IB_URL|head -c -8)
         TAG=$(echo $IB_URL | sed -n 's/.*targets\/\(\w*\)\/.*/\1/p')
+        # Prepare Release
+        ARTIFACTPATH="$(pwd)/image"
+        mkdir -p $ARTIFACTPATH
         # Upload image
         cd $IB_HOME/bin/targets/$TAG/*
+        cp * $ARTIFACTPATH
         git init
         git config user.name "bot"
         git config user.email "bot@github.com"
         git add .
-        git commit -m "$PROFILE"
-        git push --force --quiet "https://$GITHUB_TOKEN@github.com/simonsmh/openwrt-dist.git" HEAD:$PROFILE
+        git commit -m "$PROFILE$(TZ='Asia/Shanghai' date +@%Y%m%d)"
+        git push --force --quiet "https://$GITHUB_TOKEN@github.com/simonsmh/openwrt-dist.git" HEAD:image/$PROFILE
+    - uses: actions/upload-artifact@v1
+      with:
+        name: image_${{ matrix.PROFILE }}
+        path: ./image
