--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
         SDK_URL: ${{ matrix.SDK_URL }}
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       run: |
-        TAG=$(sed -n 's/.*targets\/\(\w*\)\/.*/\1/p' <<< $SDK_URL)
+        TAG=$(sed -n 's/.*targets\/\(\w*\)\/\(\w*\)\/.*/\1-\2/p' <<< $SDK_URL)
         # Upload base only
         cd ~/sdk/bin/packages/*/base
         git init
@@ -136,7 +136,7 @@ jobs:
       if: matrix.INCLUDE_FILES
       run: |
         IB_HOME=$(basename $IB_URL|head -c -8)
-        TAG=$(echo $IB_URL | sed -n 's/.*targets\/\(\w*\)\/.*/\1/p')
+        TAG=$(sed -n 's/.*targets\/\(\w*\)\/\(\w*\)\/.*/\1-\2/p' <<< $IB_URL)
         cd $IB_HOME
         mkdir -p files/root/
         mkdir -p files/etc/opkg/
@@ -154,7 +154,7 @@ jobs:
         PACKAGES: ${{ matrix.PACKAGES }}
       run: |
         IB_HOME=$(basename $IB_URL|head -c -8)
-        TAG=$(echo $IB_URL | sed -n 's/.*targets\/\(\w*\)\/.*/\1/p')
+        TAG=$(sed -n 's/.*targets\/\(\w*\)\/\(\w*\)\/.*/\1-\2/p' <<< $IB_URL)
         cd $IB_HOME
         echo "src/gz simonsmh https://github.com/simonsmh/openwrt-dist/raw/$TAG" >> repositories.conf
         makeopts=("PROFILE=${PROFILE%.*}" "PACKAGES=$PACKAGES")
@@ -168,7 +168,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       run: |
         IB_HOME=$(basename $IB_URL|head -c -8)
-        TAG=$(echo $IB_URL | sed -n 's/.*targets\/\(\w*\)\/.*/\1/p')
+        TAG=$(sed -n 's/.*targets\/\(\w*\)\/\(\w*\)\/.*/\1-\2/p' <<< $IB_URL)
         # Prepare Release
         ARTIFACTPATH="$(pwd)/image"
         mkdir -p $ARTIFACTPATH
