--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         - https://downloads.openwrt.org/releases/19.07.1/targets/ipq40xx/generic/openwrt-sdk-19.07.1-ipq40xx-generic_gcc-7.5.0_musl_eabi.Linux-x86_64.tar.xz
         - https://downloads.openwrt.org/releases/19.07.1/targets/ar71xx/generic/openwrt-sdk-19.07.1-ar71xx-generic_gcc-7.5.0_musl.Linux-x86_64.tar.xz
         - https://downloads.openwrt.org/releases/19.07.1/targets/ramips/mt7621/openwrt-sdk-19.07.1-ramips-mt7621_gcc-7.5.0_musl.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.1/targets/x86/generic/openwrt-sdk-19.07.1-x86-generic_gcc-7.5.0_musl.Linux-x86_64.tar.xz
+        - https://downloads.openwrt.org/releases/19.07.1/targets/x86/64/openwrt-sdk-19.07.1-x86-64_gcc-7.5.0_musl.Linux-x86_64.tar.xz
     steps:
     - uses: actions/checkout@master
     - name: Env for Openwrt SDK
@@ -90,7 +92,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PROFILE: [netgear_r7800, qihoo-c301, asus_rt-ac58u, asus_rt-ac58u.with_nat6, r6220.with_stubby, r6220.without_ss, qihoo-c301.with_relayd]
+        PROFILE: [netgear_r7800, qihoo-c301, asus_rt-ac58u, asus_rt-ac58u.with_nat6, r6220.with_stubby, r6220.without_ss, qihoo-c301.with_relayd, Generic.x86_64, Generic.x86]
         include:
         - PROFILE: netgear_r7800
           IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ipq806x/generic/openwrt-imagebuilder-19.07.1-ipq806x-generic.Linux-x86_64.tar.xz
@@ -103,6 +105,14 @@ jobs:
         - PROFILE: asus_rt-ac58u
           IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.1-ipq40xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic
+          INCLUDE_FILES: true
+        - PROFILE: Generic.x86
+          IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/x86/generic/openwrt-imagebuilder-19.07.1-x86-generic.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic luci-app-v2ray shadowsocks-libev-server luci-app-chinadns stubby miniupnpd luci-app-upnp
+          INCLUDE_FILES: true
+        - PROFILE: Generic.x86_64
+          IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/x86/64/openwrt-imagebuilder-19.07.1-x86-64.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-ipt-nat6 libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic luci-app-v2ray shadowsocks-libev-server luci-app-chinadns stubby miniupnpd luci-app-upnp
           INCLUDE_FILES: true
         - PROFILE: asus_rt-ac58u.with_nat6
           IB_URL: https://downloads.openwrt.org/releases/19.07.1/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.1-ipq40xx-generic.Linux-x86_64.tar.xz
