--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PROFILE: [netgear_r7800, qihoo-c301, asus_rt-ac58u, Generic.x86, Generic.x86_64, asus_rt-ac58u.with_nat6, r6220.with_stubby, r6220.without_ss, qihoo-c301.with_relayd]
+        PROFILE: [netgear_r7800, qihoo-c301, asus_rt-ac58u, r6220, Generic.x86, Generic.x86_64, asus_rt-ac58u.with_nat6, r6220.with_stubby, r6220.without_ss, qihoo-c301.with_relayd]
         include:
         - PROFILE: netgear_r7800
           IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/ipq806x/generic/openwrt-imagebuilder-19.07.3-ipq806x-generic.Linux-x86_64.tar.xz
@@ -103,6 +103,10 @@ jobs:
         - PROFILE: asus_rt-ac58u
           IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.3-ipq40xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 dosfstools ntfs-3g e2fsprogs libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns luci-app-dns-forwarder stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn mount-utils shadowsocks-libev smartdns uhttpd bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic
+          INCLUDE_FILES: true
+        - PROFILE: r6220
+          IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/ramips/mt7621/openwrt-imagebuilder-19.07.3-ramips-mt7621.Linux-x86_64.tar.xz
+          PACKAGES: ca-bundle ca-certificates libustream-openssl curl ip-full iptables-mod-tproxy libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn shadowsocks-libev smartdns bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic
           INCLUDE_FILES: true
         - PROFILE: Generic.x86
           IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/x86/generic/openwrt-imagebuilder-19.07.3-x86-generic.Linux-x86_64.tar.xz
@@ -118,7 +122,7 @@ jobs:
           INCLUDE_FILES: false
         - PROFILE: r6220.with_stubby
           IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/ramips/mt7621/openwrt-imagebuilder-19.07.3-ramips-mt7621.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client tcpdump bind-dig iperf3 mtr iptables-mod-tproxy ip shadowsocks-libev luci-app-shadowsocks luci-app-chinadns stubby shadowsocks-libev-server kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras iptables-mod-iprange kmod-ipt-nat6 kmod-ip6tables-extra kmod-ip6-tunnel miniupnpd luci-app-upnp block-mount
+          PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client tcpdump bind-dig iperf3 mtr iptables-mod-tproxy ip shadowsocks-libev luci-app-shadowsocks luci-app-chinadns stubby shadowsocks-libev-server kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras iptables-mod-iprange kmod-ipt-nat6 kmod-ip6tables-extra kmod-ip6-tunnel miniupnpd luci-app-upnp block-mount ndppd
           INCLUDE_FILES: false
         - PROFILE: r6220.without_ss
           IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/ramips/mt7621/openwrt-imagebuilder-19.07.3-ramips-mt7621.Linux-x86_64.tar.xz
