--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,28 +36,28 @@ jobs:
       run: |
         cd ~/sdk
         # Shadowsocks
-        git clone https://github.com/shadowsocks/luci-app-shadowsocks package/luci-app-shadowsocks
-        git clone https://github.com/shadowsocks/openwrt-shadowsocks package/shadowsocks-libev
-        git clone https://github.com/aa65535/openwrt-simple-obfs package/simple-obfs
+        git clone -b master https://github.com/shadowsocks/luci-app-shadowsocks package/luci-app-shadowsocks
+        git clone -b master https://github.com/shadowsocks/openwrt-shadowsocks package/shadowsocks-libev
+        git clone -b master https://github.com/aa65535/openwrt-simple-obfs package/simple-obfs
         # Misc
-        git clone https://github.com/aa65535/openwrt-chinadns package/chinadns
-        git clone https://github.com/aa65535/openwrt-dns-forwarder package/dns-forwarder
-        git clone https://github.com/aa65535/openwrt-dist-luci package/openwrt-dist-luci
+        git clone -b master https://github.com/aa65535/openwrt-chinadns package/chinadns
+        git clone -b master https://github.com/aa65535/openwrt-dns-forwarder package/dns-forwarder
+        git clone -b master https://github.com/aa65535/openwrt-dist-luci package/openwrt-dist-luci
         # Vlmcsd
-        git clone https://github.com/mchome/openwrt-vlmcsd package/vlmcsd
-        git clone https://github.com/mchome/luci-app-vlmcsd package/luci-app-vlmcsd
+        git clone -b master https://github.com/mchome/openwrt-vlmcsd package/vlmcsd
+        git clone -b master https://github.com/mchome/luci-app-vlmcsd package/luci-app-vlmcsd
         # V2Ray
-        git clone https://github.com/kuoruan/openwrt-v2ray package/v2ray-core
+        git clone -b master https://github.com/kuoruan/openwrt-v2ray package/v2ray-core
         git clone -b luci2 https://github.com/kuoruan/luci-app-v2ray package/luci-app-v2ray
         # V2Ray-Plugin
-        git clone https://github.com/simonsmh/openwrt-v2ray-plugin package/v2ray-plugin
+        git clone -b master https://github.com/simonsmh/openwrt-v2ray-plugin package/v2ray-plugin
         # Clash
-        git clone https://github.com/vernesong/OpenClash package/openclash
+        git clone -b master https://github.com/vernesong/OpenClash package/openclash
         # Smartdns
-        git clone https://github.com/simonsmh/openwrt-smartdns package/smartdns
-        git clone https://github.com/simonsmh/luci-app-smartdns package/luci-app-smartdns
+        git clone -b master https://github.com/pymumu/openwrt-smartdns package/smartdns
+        git clone -b master https://github.com/pymumu/luci-app-smartdns package/luci-app-smartdns
         # Dependency
-        #git clone https://github.com/shadowsocks/openwrt-feeds package/custom
+        #git clone -b master https://github.com/shadowsocks/openwrt-feeds package/custom
         pushd package/openwrt-dist-luci/tools/po2lmo ; make && sudo make install ; popd
         ./scripts/feeds update -a
         ./scripts/feeds install golang c-ares libev libopenssl libsodium mbedtls pcre
