--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,7 +108,7 @@ jobs:
           IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/ramips/mt7621/openwrt-imagebuilder-19.07.3-ramips-mt7621.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl curl ip-full iptables-mod-tproxy libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn shadowsocks-libev smartdns bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic dnsmasq-full -dnsmasq
           INCLUDE_FILES: true
-        - PROFILE: Generic.x86_64
+        - PROFILE: x86_64
           IB_URL: https://downloads.openwrt.org/snapshots/targets/x86/64/openwrt-imagebuilder-x86-64.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-app-samba5 luci-app-openclash stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake tcpdump dnsmasq-full -dnsmasq kmod-usb-net-rtl8152
           INCLUDE_FILES: true
