--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,10 +108,10 @@ jobs:
           IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/ramips/mt7621/openwrt-imagebuilder-19.07.3-ramips-mt7621.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates libustream-openssl curl ip-full iptables-mod-tproxy libmbedtls luci luci-app-samba luci-app-shadowsocks luci-app-smartdns stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba-zh-cn luci-i18n-smartdns-zh-cn shadowsocks-libev smartdns bind-dig knot-dig iperf3 mtr htop wpad-openssl -wpad-basic dnsmasq-full -dnsmasq
           INCLUDE_FILES: true
-        - PROFILE: generic.x86_64
-          IB_URL: https://downloads.openwrt.org/snapshots/targets/x86/64/openwrt-imagebuilder-x86-64.Linux-x86_64.tar.xz
-          PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-samba4 luci-app-openclash stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake tcpdump dnsmasq-full -dnsmasq kmod-usb-net-rtl8152
-          INCLUDE_FILES: true
+#         - PROFILE: generic.x86_64
+#           IB_URL: https://downloads.openwrt.org/snapshots/targets/x86/64/openwrt-imagebuilder-x86-64.Linux-x86_64.tar.xz
+#           PACKAGES: ca-bundle ca-certificates libustream-openssl block-mount usbutils coreutils coreutils-base64 curl iperf3 ip-full iptables-mod-tproxy ebtables kmod-ebtables-ipv6 kmod-usb-storage-extras kmod-usb-storage-uas kmod-fs-exfat kmod-fs-vfat kmod-fs-ntfs kmod-fs-ext4 kmod-ipt-nat6 kmod-tun dosfstools ntfs-3g e2fsprogs fdisk libmbedtls luci luci-compat luci-app-samba4 luci-app-openclash stubby luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn luci-i18n-opkg-zh-cn luci-i18n-samba4-zh-cn mount-utils uhttpd bind-dig knot-dig iperf3 mtr htop tmux nano lsblk etherwake tcpdump dnsmasq-full -dnsmasq kmod-usb-net-rtl8152
+#           INCLUDE_FILES: true
         - PROFILE: asus_rt-ac58u.master
           IB_URL: https://downloads.openwrt.org/releases/19.07.3/targets/ipq40xx/generic/openwrt-imagebuilder-19.07.3-ipq40xx-generic.Linux-x86_64.tar.xz
           PACKAGES: ca-bundle ca-certificates luci luci-i18n-base-zh-cn wget curl luci-i18n-firewall-zh-cn wpad-openssl -wpad-basic libustream-openssl coreutils-base64 lsblk fdisk tmux nano etherwake openssh-client tcpdump bind-dig iperf3 mtr iptables-mod-tproxy ip shadowsocks-libev luci-app-shadowsocks luci-app-chinadns stubby shadowsocks-libev-server kmod-fs-vfat kmod-fs-ext4 kmod-usb-storage-extras iptables-mod-iprange kmod-ipt-hashlimit kmod-ipt-nat6 kmod-ip6tables-extra kmod-ip6-tunnel miniupnpd luci-app-upnp block-mount
