--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         git clone -b master https://github.com/mchome/openwrt-vlmcsd package/vlmcsd
         git clone -b master https://github.com/mchome/luci-app-vlmcsd package/luci-app-vlmcsd
         # V2Ray
-        git clone -b master https://github.com/kuoruan/openwrt-v2ray package/v2ray-core
+        #git clone -b master https://github.com/kuoruan/openwrt-v2ray package/v2ray-core
         git clone -b luci2 https://github.com/kuoruan/luci-app-v2ray package/luci-app-v2ray
         # V2Ray-Plugin
         git clone -b master https://github.com/simonsmh/openwrt-v2ray-plugin package/v2ray-plugin
